--- a/ProfileMatch.Components/Dialogs/AdminDepartmentDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminDepartmentDialog.razor
@@ -1,9 +1,9 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudForm @ref="Form">
-            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["Project Name"]
-                          Required="true" RequiredError=@L["Project name is required!"] />
-            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Project Description"]
+            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["Department Name"]
+                          Required="true" RequiredError=@L["Department name is required!"] />
+            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Department Description"]
                           Lines="5" />
         </MudForm>
     </DialogContent>
