--- a/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
+++ b/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
@@ -42,11 +42,11 @@ else
             Class="mt-0"></MudTextField>
         </ToolBarContent>
         <Columns>
-            <Column T="QuestionUserLevelVM" Field="CategoryName" Title="Category"/>
-            <Column T="QuestionUserLevelVM" Field="QuestionName" Title="Question"/>
-            <Column T="QuestionUserLevelVM" Field="Description" Title="Description"/>
-            <Column T="QuestionUserLevelVM" Field="Level" Title="Level"/>
-            <Column T="QuestionUserLevelVM" Field="FullName" Title="Full Name"/>
+            <Column T="QuestionUserLevelVM" Field="CategoryName" Title=@L["Category"]/>
+            <Column T="QuestionUserLevelVM" Field="QuestionName" Title=@L["Question"]/>
+            <Column T="QuestionUserLevelVM" Field="Description" Title=@L["Description"]/>
+            <Column T="QuestionUserLevelVM" Field="Level" Title=@L["Level"]/>
+            <Column T="QuestionUserLevelVM" Field="FullName" Title=@L["Full Name"]/>
         </Columns>
         <PagerContent>
             <MudTablePager HidePagination="false" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
