--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -10,8 +10,8 @@
                 <AdminDepartmentList />
             </MudTabPanel>
             <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
-            <MudTabPanel Text=@L["Closed questions"]><AdminClosedQuestions /></MudTabPanel>
-            <MudTabPanel Text=@L["Open questions"]><AdminOpenQuestions /></MudTabPanel>
+            <MudTabPanel Text=@L["Closed Questions"]><AdminClosedQuestions /></MudTabPanel>
+            <MudTabPanel Text=@L["Open Questions"]><AdminOpenQuestions /></MudTabPanel>
         </MudTabs>
     </Authorized>
     <NotAuthorized>
