--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -30,9 +30,9 @@ else
                 <MudTextField T="string" @bind-Value="@EditedUser.FirstName" Immediate="true" Label=@L["First Name"]
                               Required="true" RequiredError=@L["Person name is required!"] />
                 <MudTextField T="string" @bind-Value="@EditedUser.LastName" Immediate="true" Label=@L["Last Name"] Required="true" RequiredError=@L["Person name is required!"] />
-                <MudTextField T="string" Label="Email" @bind-Value="@EditedUser.Email" Required="true" RequiredError=@L["Email is required!"] />
+                <MudTextField T="string" Label=@L["Email"] @bind-Value="@EditedUser.Email" Required="true" RequiredError=@L["Email is required!"] />
 
-                    <MudTextField Label="Password" Variant="Variant.Text" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="ButtonTestclick" @bind-Value="@EditedUserPassword" Required="true" RequiredError=@L["Password is required!"] />
+                    <MudTextField Label=@L["Password"] Variant="Variant.Text" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="ButtonTestclick" @bind-Value="@EditedUserPassword" Required="true" RequiredError=@L["Password is required!"] />
                 
                 <MudSelect Required="true" T="Gender?" Label=@L["Select Gender"] @bind-Value="@EditedUser.Gender"
                            OffsetY="true" RequiredError=@L["Gender is required!"]
@@ -53,8 +53,8 @@ else
                                Editable="false" />
                                <MudTable Items="@UserRoles">
                                     <HeaderContent>
-                                   <MudTh>Role Name</MudTh>
-                                   <MudTh>Assigned</MudTh>
+                                   <MudTh>@L["Role Name"]</MudTh>
+                                   <MudTh>@L["Assigned"]</MudTh>
                                    </HeaderContent>
                                    <RowTemplate>
                                          <MudTd DataLabel="Role Name">@context.RoleName</MudTd>
