--- a/ProfileMatch.Components/Dialogs/UserNoteDialog.razor
+++ b/ProfileMatch.Components/Dialogs/UserNoteDialog.razor
@@ -3,7 +3,7 @@
         <MudGrid>
             <MudItem xs="12" md="12" sm="12">
                 <MudForm @ref="Form">
-                    <MudTextField @ref="multilineReference" T="string" @bind-Value="@TempDescription" Counter="200" MaxLength="200" HelperText="Max length" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Variant="Variant.Text" Lines="5" />
+                    <MudTextField @ref="multilineReference" T="string" @bind-Value="@TempDescription" Counter="200" MaxLength="200" HelperText=@L["Max length"] Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Variant="Variant.Text" Lines="5" />
                         <MudCheckBox @bind-Checked="IsDisplayed" Label=@L["Display"]/>
                         
                 </MudForm>
