--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<UserCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
 <MudDivider Class="mb-4" />
-<MudNavMenu>
+<MudNavMenu Color="Color.Primary">
     <MudNavLink Href="user/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Dashboard"]</MudNavLink>
     <MudNavLink Href="manager/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Manager"]</MudNavLink>
     <MudNavLink Href="admin/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Administration"]</MudNavLink>
