added import category from Excel, ignore attributes

--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -12,6 +12,9 @@
             <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
             <MudTabPanel Text=@L["Closed Questions"]><AdminClosedQuestions /></MudTabPanel>
             <MudTabPanel Text=@L["Open Questions"]><AdminOpenQuestions /></MudTabPanel>
+            <MudTabPanel Text=@L["Maintenance"]><AdminMaintenance /></MudTabPanel>
+
+            
         </MudTabs>
     </Authorized>
     <NotAuthorized>
