--- a/ProfileMatch.Components/Admin/AdminDepartmentList.razor
+++ b/ProfileMatch.Components/Admin/AdminDepartmentList.razor
@@ -6,12 +6,14 @@
         <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
     <HeaderContent>
+        <MudTh>@L["Id"]</MudTh>
         <MudTh>@L["Name"]</MudTh>
         <MudTh>@L["Description"]</MudTh>
         <MudTh>@L["Members"]</MudTh>
         <MudTh>@L["Actions"]</MudTh>
     </HeaderContent>
     <RowTemplate>
+        <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
         <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
         <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
         <MudTd DataLabel=@L["Members"]>@context.ApplicationUsers.Count</MudTd>
