--- a/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
+++ b/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
@@ -4,7 +4,7 @@
 }
 else
 {
-     <MudText Typo="Typo.h6">@L["Questions Table"]</MudText>
+     <MudText Typo="Typo.h6">@L["ClosedQuestions Table"]</MudText>
     <MudItem Class="d-flex">
         
     </MudItem>
@@ -43,7 +43,7 @@ else
         </ToolBarContent>
         <Columns>
             <Column T="QuestionUserLevelVM" Field="CategoryName" Title=@L["Category"]/>
-            <Column T="QuestionUserLevelVM" Field="QuestionName" Title=@L["Question"]/>
+            <Column T="QuestionUserLevelVM" Field="QuestionName" Title=@L["ClosedQuestion"]/>
             <Column T="QuestionUserLevelVM" Field="Description" Title=@L["Description"]/>
             <Column T="QuestionUserLevelVM" Field="Level" Title=@L["Level"]/>
             <Column T="QuestionUserLevelVM" Field="FullName" Title=@L["Full Name"]/>
