--- a/ProfileMatch.Components/User/UserCertList.razor
+++ b/ProfileMatch.Components/User/UserCertList.razor
@@ -1,4 +1,4 @@
-﻿@using MudBlazor.Examples.Data.Models
+﻿@*@using MudBlazor.Examples.Data.Models
 
 <MudText Typo="Typo.h6">@L["Certificates"]</MudText>
 
@@ -53,4 +53,4 @@
 <br />
 
 <MudButton @onclick="AddCert" Variant="Variant.Filled" Color="Color.Primary">@L["Add Certificate"]</MudButton>
-<MudButton @onclick="DelCert" Variant="Variant.Filled" Color="Color.Primary">@L["Delete"]</MudButton>
+<MudButton @onclick="DelCert" Variant="Variant.Filled" Color="Color.Primary">@L["Delete"]</MudButton>*@
