--- a/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
@@ -1,7 +1,7 @@
 ﻿<MudButton OnClick="(()=>NoteCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
-<MudTable Items="@Notes" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<Note,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
+<MudTable Items="@OpenQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
+        <MudText Typo="Typo.h6">@L["Open ClosedQuestions"]</MudText>
         <MudSpacer />
         <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
@@ -12,15 +12,17 @@
         <col />
     </ColGroup>
     <HeaderContent>
+        <MudTh>@L["Id"]</MudTh>
         <MudTh>@L["Name"]</MudTh>
         <MudTh>@L["Description"]</MudTh>
         <MudTh>@L["Actions"]</MudTh>
     </HeaderContent>
     <RowTemplate>
+        <MudTd DataLabel=@L["Id"]>@context.Id</MudTd>
         <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
         <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
         <MudTd DataLabel=@L["Edit"]>
-            <MudButton OnClick="((e)=>NoteUpdate(context))" Color="Color.Tertiary">@L["Edit Question"]</MudButton>
+            <MudButton OnClick="((e)=>NoteUpdate(context))" Color="Color.Tertiary">@L["Edit ClosedQuestion"]</MudButton>
         </MudTd>
     </RowTemplate>
     <PagerContent>
