another typos fix

--- a/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminClosedQuestions.razor
@@ -20,7 +20,7 @@ else
             <col />
         </ColGroup>
         <ToolBarContent>
-            <MudText Typo="Typo.h6">@L["Closed ClosedQuestions"]</MudText>
+            <MudText Typo="Typo.h6">@L["Closed Questions"]</MudText>
             <MudSpacer />
             <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
