--- a/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
@@ -22,7 +22,7 @@
         <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
         <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
         <MudTd DataLabel=@L["Edit"]>
-            <MudButton OnClick="((e)=>NoteUpdate(context))" Color="Color.Tertiary">@L["Edit Closed Question"]</MudButton>
+            <MudButton OnClick="((e)=>NoteUpdate(context))" Color="Color.Tertiary">@L["Edit Question"]</MudButton>
         </MudTd>
     </RowTemplate>
     <PagerContent>
