language, tables layout update

--- a/ProfileMatch.Components/Admin/AdminCategoryList.razor
+++ b/ProfileMatch.Components/Admin/AdminCategoryList.razor
@@ -26,7 +26,7 @@
         <MudTd DataLabel=@L["ClosedQuestions"]>@context.ClosedQuestions.Count</MudTd>
         <MudTd DataLabel=@L["Edit"]>
             <MudButton OnClick="((e)=>CategoryUpdate(context))" Color="Color.Tertiary">@L["Edit Category"]</MudButton>
-            <MudButton OnClick="((e)=>QuestionCreate(context))" Color="Color.Success">@L["Add ClosedQuestion"]</MudButton>
+            <MudButton OnClick="((e)=>QuestionCreate(context))" Color="Color.Success">@L["Add Question"]</MudButton>
         </MudTd>
     </RowTemplate>
     <PagerContent>
