--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -29,11 +29,13 @@ else
             <MudTd DataLabel=@L["Is Active"]><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
             <MudTd DataLabel="">
              @*   @if(user.Identity.Name!=context.Email){*@
-                <MudFab Color="Color.Primary" OnClick="@(()=> EditProfile(context))" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
+               
+                <MudButton OnClick="@(()=> EditProfile(context))" Color="Color.Tertiary">@L["Edit User"]</MudButton>
                 @*}*@
             </MudTd>
             <MudTd DataLabel="">
-                <MudFab Color="Color.Primary" OnClick="@(()=>ShowProfile(context))" Icon="@Icons.Material.Filled.Person" Size="Size.Small" IconSize="Size.Small" />
+               
+           <MudButton OnClick="@(()=>ShowProfile(context))" Color="Color.Success">@L["Show profile"]</MudButton>
             </MudTd>
         </RowTemplate>
         <PagerContent>
