--- a/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
@@ -1,7 +1,7 @@
 ﻿<MudButton OnClick="(()=>NoteCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
 <MudTable Items="@OpenQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">@L["Open ClosedQuestions"]</MudText>
+        <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
         <MudSpacer />
         <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
