--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -1,5 +1,4 @@
-﻿@page "/user/dashboard"
-@page "/"
+﻿@page "/"
     <AuthorizeView>
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
