--- a/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
+++ b/ProfileMatch.Components/Admin/AdminOpenQuestions.razor
@@ -1,9 +1,14 @@
-﻿<MudButton OnClick="(()=>NoteCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
+﻿ <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
+  <MudSpacer />
+        <MudGrid Spacing="0" Class="d-flex justify-end">
+                <MudItem xs="12" md="5">
+   <MudTextField  @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="d-flex justify-end"></MudTextField>
+</MudItem>   
+</MudGrid>
 <MudTable Items="@OpenQuestions" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<OpenQuestion,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">@L["Open Questions"]</MudText>
-        <MudSpacer />
-        <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudButton OnClick="(()=>NoteCreate())" Class="pa-2 mx-2" Variant="Variant.Text" Color="Color.Primary">@L["Add New"]</MudButton>
+       <MudSpacer/>
     </ToolBarContent>
     <ColGroup>
         <col />
