--- a/ProfileMatch.Components/Dialogs/AdminOpenQuestionDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminOpenQuestionDialog.razor
@@ -1,8 +1,8 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudForm @ref="Form">
-            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["ClosedQuestion Name"] Required="true" RequiredError=@L["ClosedQuestion name is required!"] />
-            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["ClosedQuestion Description"] Lines="5" />
+            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["Question Name"] Required="true" RequiredError=@L["Question name is required!"] />
+            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Question Description"] Lines="5" />
         </MudForm>
     </DialogContent>
     <DialogActions>
